--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         var naam = document.getElementById("name");
 
         var colors = ["white", "green", "blue", "yellow","red"];
-        var namen =  ["katrijn", "katrij", "katri", "katr", "kat", "ka", "k", "k", "ka", "kat", "katr", "katri", "katrij", "katrijn", "atrijn", "trijn", "rijn", "ijn", "jn","n", "jn", "ijn", "rijn", "trijn", "atrijn"];
+        var namen =  ["katrijn", "katrij", "katri", "katr", "kat", "ka", "k", "e", "be", "ebe", "iebe", "siebe", "iebe", "ebe", "be", "e", "n", "jn", "ijn", "rijn", "trijn", "atrijn";
         var counterColors = 0;
 
         var counterNamen = 0;
